SET(SOURCES ../nfq.c ../nfq_common.c ../nfq_utils.c ../exception.c)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}")
FIND_PACKAGE(Perl)
FIND_PACKAGE(PerlLibs)

IF ( PERL_EXECUTABLE )
	EXEC_PROGRAM( ${PERL_EXECUTABLE} ARGS "-e 'use Config; print \$Config{revision},\"\\n\"'" OUTPUT_VARIABLE PERL_VERSION )
ENDIF ( PERL_EXECUTABLE )

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${LIBNFQ_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${PERL_INCLUDE_PATH})
IF(PERL_EXTRA_C_FLAGS)
  ADD_DEFINITIONS(${PERL_EXTRA_C_FLAGS})
ENDIF(PERL_EXTRA_C_FLAGS)

SET_PROPERTY(SOURCE ../libnetfilter_queue.i PROPERTY SWIG_MODULE_NAME nfqueue)

SWIG_ADD_LIBRARY(nfqueue-perl LANGUAGE perl SOURCES ../libnetfilter_queue.i ${SOURCES})
SWIG_LINK_LIBRARIES(nfqueue-perl ${PERL_LIBRARY} ${LIBNFQ_LDFLAGS})

set_target_properties(nfqueue-perl PROPERTIES OUTPUT_NAME "nfqueue")

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/nfqueue.pm
	DESTINATION ${LIB_INSTALL_DIR}/perl${PERL_VERSION}/)

INSTALL(TARGETS nfqueue-perl LIBRARY DESTINATION
	DESTINATION ${LIB_INSTALL_DIR}/perl${PERL_VERSION}/)

